@@ -1,3 +1,8 @@
+1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>
+
+	* actcltk.m4: Don't clear tkincludedir or tclincludedir before
+	scanning directories.  First check any previous setting.
+
 1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>
 
 	* actcltk.m4 (INCPLACES, LIBPLACES): Use defaultdir instead of
